# Easy-Training-Model

./: .gitignore  AGENTS.md  EasyTinking.iss  EasyTinking.spec  EasyTraining.iss  EasyTraining.spec  LICENSE  README.en.md  README.md  build.bat  main.py  makeInsatll.bat  pack.bat  pyproject.toml  requirements-lock.txt  requirements.txt  setup_icon.py  test_export_debug.py  test_gguf.py
.github/workflows/: lint.yml
assess/: light_theme.qss  nav_icons.py  opencode_prompt_guide.md  professional_theme.qss  training_tool_demo.py
core/: config.py  data_manager.py  error_handler.py  exporter.py  exporter_process.py  infer_worker.py  inferencer.py  model_manager.py  ollama_deployer.py  train_worker.py  trainer.py
core/services/: export_service.py  train_service.py
core/workers/: download_worker.py  export_worker.py
locale/: en.json  zh.json
tests/: __init__.py  test_config.py  test_i18n.py
tools/: convert_hf_to_gguf.py  convert_to_training.py  extract_code.py  quantize_gguf.py
ui/: app.py  error_dialog.py  theme.py
ui/components/: data_table.py  gpu_monitor.py  loss_chart.py  model_card.py  progress_bar.py
ui/pages/: data_page.py  export_page.py  logs_page.py  model_page.py  settings_page.py  test_page.py  train_page.py
ui/pages/train/: __init__.py  config_panel.py  monitor_panel.py  train_page.py
utils/: gpu_info.py  i18n.py  logger.py  system_info.py  worker.py
非源码文件/: check_fields.py  test_gguf.py  test_ollama_path.txt
